scenarios/06-extensions/https-ext-auth-grpc/20-auth-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-backend-a-httproute-to-ext-authz-grpc
  namespace: auth
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: backend-a
  to:
    - group: ""
      kind: Service
      name: external-authz
