scenarios/06-extensions/https-ext-auth-grpc/30-gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ext-auth-grpc-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/part-of: demo
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: ext-auth-grpc.example.test
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: https-ext-auth-grpc-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
