scenarios/06-extensions/https-ext-auth-grpc/31-httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ext-auth-grpc-route
  namespace: backend-a
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: ext-auth-grpc-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - ext-auth-grpc.example.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /public
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: api
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /grpc-auth
      filters:
        - type: ExternalAuth
          externalAuth:
            protocol: GRPC
            backendRef:
              name: external-authz
              namespace: auth
              port: 9000
            grpc: {}
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: api
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /grpc-auth-shared
      filters:
        - type: ExternalAuth
          externalAuth:
            protocol: GRPC
            backendRef:
              name: external-authz
              namespace: auth
              port: 9000
            grpc: {}
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: api
          port: 80
